# LollipopConnect

./: .gitignore  CMakeLists.txt  main.cpp
qml/: AboutMe.qml  App.qml  FileControlStage.qml  QuickStage.qml  SettingStage.qml  main.qml
src/: main.cpp
src/component/: CircularReveal.h  FileWatcher.h  FpsItem.h
src/log/: Log.cpp
src/util/: SettingsHelper.cpp  SettingsHelper.h
